--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="https://www.researchgate.net/profile/Renata_Frade" target="_blank">ResearchGate</a>
                     <a href="https://github.com/renatafrade" target="_blank">GitHub</a>
                     <a href="https://www.linkedin.com/in/renatafrade/" target="_blank">LinkedIn</a>
-                    <a href="mailto:frade.renata@gmail.com">Email</a>
+                    <a href="/cdn-cgi/l/email-protection#4026322124256e32252e21342100272d21292c6e232f2d">Email</a>
                 </div>
             </div>
         </section>
@@ -47,36 +47,37 @@
         <section class="bio-section">
             <h2>Renata Loureiro Frade, PhD</h2>
             
-            <p><strong>Dr. Renata Frade</strong> is an interdisciplinary researcher in Communication Sciences, Information Science, and Digital Technologies working at the intersection of technology, gender, and artificial intelligence. With a PhD in Information and Communication in Digital Platforms from the University of Aveiro and University of Porto (awarded with Distinction and Honours), her research focuses on feminist media studies, digital storytelling, and ethical AI.</p>
+            <p>I am an interdisciplinary researcher working at the intersection of Communication Sciences, Information Science and Digital Technologies, with a focus on technology, Human–Computer Interaction (HCI), transmedia, gender, feminism and society. My work combines critical theory, participatory methodologies and social impact, examining how digital technologies shape human interaction, power relations and processes of inclusion and exclusion.</p>
 
-            <p>She is a pioneer in developing technofeminist storytelling as a communicational praxis, examining how AI systems reproduce or contest gendered inequalities through narrative, visibility, and symbolic recognition. Her work combines feminist HCI, participatory design, and critical platform studies to understand women's technology communities in Lusophone contexts.</p>
+            <p>Over the past decade, my research has focused on the leadership, organisation and communication practices of women-in-technology communities in Brazil and Portugal. This trajectory is grounded in a hybrid professional path that bridges academia, the publishing industry, science journalism and technology activism, allowing empirical contexts to inform theory-driven research.</p>
 
-            <p>Since 2021, she has been a researcher at the Oscar Sala Chair (Institute of Advanced Studies, University of São Paulo), investigating the societal impacts of AI from decolonial and intersectional feminist perspectives. She is a member of the A+Alliance (Feminist AI Research Network) and actively contributes to debates on responsible AI and inclusive technological design.</p>
+            <p>I began my undergraduate studies in Social Communication at the Pontifical Catholic University of Rio de Janeiro in the same year the World Wide Web became publicly accessible. Despite having no computer or internet access at home, I enrolled in an advanced internet training course at one of Latin America's most sophisticated computing laboratories. Without prior digital literacy, I became one of the first people to communicate via the internet in Brazil—an experience that decisively shaped my commitment to studying communication and technology, as well as the social implications of digital platforms, the web and mobile devices.</p>
 
-            <h3>Academic Recognition</h3>
-            <ul class="recognition-list">
-                <li><strong>2025</strong> PhD awarded with <strong>Distinction and Honours</strong>, University of Aveiro</li>
-                <li><strong>2023</strong> Lead Editor, <em>Technofeminism: Multi and Transdisciplinary Contemporary Views on Women in Technology</em> (UA Editora)</li>
-                <li><strong>2021-2025</strong> FCT Doctoral Research Fellowship (2020.06640.BD)</li>
-                <li><strong>2024</strong> Provisional Patent Application: "Platform for Communication Management Based on Testimonial Narratives"</li>
-                <li><strong>2024</strong> Registered Trademark: "Femtellers"</li>
-                <li><strong>Published in</strong> Springer LNCS, ACM proceedings, Scopus-indexed journals</li>
-            </ul>
+            <p>Before my doctorate, I maintained a parallel academic and professional career, strategically using professional environments as sites for data collection and applied research. As a Science and Health journalist for major Brazilian newspapers (Extra and O Globo), I developed strong expertise in science communication, translating complex scientific information for socially diverse and underserved audiences. I also worked as a columnist on women in technology for Mídia Ninja, the largest independent media outlet in Latin America, exploring themes that later became central to my doctoral research.</p>
+
+            <p>I hold a Master's degree in Letters (UERJ) and have nearly two decades of experience in the academic and professional publishing sector. One of the most significant outcomes of this trajectory is the book <em>Technofeminism: Multi and Transdisciplinary Contemporary Views of Women in Technology</em>, which I conceived, co-edited and co-authored during my PhD. The volume brings together internationally recognised scholars—including Judy Wajcman (LSE)—and is aligned with the United Nations Sustainable Development Goals, serving both as a theoretical reference in technofeminist studies and as a tool for public policy, education and social impact.</p>
+
+            <p>My PhD in Information and Communication in Digital Platforms (University of Aveiro / University of Porto), funded by the Portuguese Foundation for Science and Technology and awarded with distinction and honours, addresses a major gap in Technofeminism research. I mapped and analysed 247 women-in-technology communities in Brazil and Portugal, developing organisational and communication models, a transmedia campaign, and a feminist activist technology prototype, using qualitative methods, digital ethnography, participatory design and HCI.</p>
+
+            <p>I am currently a researcher in Artificial Intelligence at the Oscar Sala Chair (Institute for Advanced Studies, University of São Paulo), where I investigate the social impacts of AI from a feminist, decolonial and intersectional perspective, with a particular focus on the Global South. I am an active member of international research networks such as AtGender and the Feminist AI Research Network (FAIR).</p>
+
+            <p>My academic output includes authored and edited books, peer-reviewed book chapters and journal articles indexed in Scopus and Web of Science, as well as papers presented at international conferences. I have experience in research coordination, editorial leadership, knowledge transfer, open science, internationalisation and social impact. I have taught and conducted research in Portugal, Spain and Brazil, have been interviewed by Público newspaper, and was invited by the IEEE to present my research findings in Portugal.</p>
+
+            <p>I am committed to rigorous, socially engaged and transformative research, dedicated to building more ethical, inclusive and just digital futures through the integration of science, technology and feminist praxis.</p>
 
             <h3>Research Interests</h3>
             <ul class="interests-list">
-                <li>🤖 Feminist AI & Ethics</li>
-                <li>💬 Digital Storytelling & Transmedia</li>
+                <li>💬 Communication Sciences & Digital Technologies</li>
                 <li>👥 Human-Computer Interaction (HCI)</li>
-                <li>📱 Communication Sciences & Platform Studies</li>
-                <li>🌍 Decolonial Technology Studies</li>
-                <li>🫱🏻‍🫲🏾 Gender, Diversity & Inclusion in Tech</li>
+                <li>🤖 Feminist AI & Ethics</li>
+                <li>📱 Digital Storytelling & Transmedia</li>
+                <li>🌍 Decolonial & Intersectional Technology Studies</li>
+                <li>🫱🏻‍🫲🏾 Women in Technology Communities</li>
+                <li>🔬 Participatory Design & Social Impact</li>
+                <li>📊 Critical Platform Studies</li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>© 2026 Renata Loureiro Frade</p>
-    </footer>
-</body>
-</html>
+        <p>© 2026 Renata Lour
