--- a/index.html
+++ b/index.html
@@ -80,5 +80,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>© 2026 Renata Frade</p>
+   <footer>
+     © 2026 Renata Frade
+   </footer>
