--- a/index.html
+++ b/index.html
@@ -80,6 +80,4 @@
         </section>
     </main>
 
-   <footer>
-     © 2026 Renata Frade
-   </footer>
+      <p>© 2026 Renata Frade · GitHub Pages</p>
