--- a/index.html
+++ b/index.html
@@ -80,4 +80,6 @@
         </section>
     </main>
 
-      <p>© 2026 Renata Frade · GitHub Pages</p>
+      <p>© 2026 Renata Frade</p>
+</body>
+</html>
