--- a/projects.html
+++ b/projects.html
@@ -7,24 +7,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,600;1,400&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&display=swap" rel="stylesheet">
     <title>Research &amp; Projects | Femtellers, Women in Tech &amp; FCT PhD — Renata Frade</title>
-    <meta name="description" content="Renata Frade's research projects: Femtellers feminist technology platform, FCT-funded PhD on 247 women-in-tech communities (Brazil &amp; Portugal), Oscar Sala Chair AI &amp; gender research.">
+    <meta name="description" content="Renata Frade's research projects: FCT-funded PhD on 247 women-in-tech communities (Brazil &amp; Portugal), Oscar Sala Chair AI &amp; gender research.">
     <link rel="canonical" href="https://renatafrade.github.io/projects.html">
     <link rel="preload" href="style.css" as="style">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Renata Loureiro Frade, PhD">
     <meta property="og:url" content="https://renatafrade.github.io/projects.html">
     <meta property="og:title" content="Research &amp; Projects | Renata Loureiro Frade, PhD">
-    <meta property="og:description" content="Femtellers platform, women in tech communities research (Brazil &amp; Portugal), feminist HCI, Oscar Sala Chair AI &amp; gender.">
+    <meta property="og:description" content="women in tech communities research (Brazil &amp; Portugal), feminist HCI, Oscar Sala Chair AI &amp; gender.">
     <meta property="og:image" content="https://renatafrade.github.io/attachments/renata-frade.jpg">
     <meta property="og:image:alt" content="Renata Loureiro Frade, PhD">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Research &amp; Projects | Renata Frade">
-    <meta name="twitter:description" content="Femtellers, women in tech communities, feminist HCI, FCT PhD &amp; Oscar Sala Chair research.">
+    <meta name="twitter:description" content="women in tech communities, feminist HCI, FCT PhD &amp; Oscar Sala Chair research.">
     <meta name="twitter:image" content="https://renatafrade.github.io/attachments/renata-frade.jpg">
     <meta name="twitter:image:alt" content="Renata Loureiro Frade, PhD">
     <link rel="stylesheet" href="style.css">
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"WebPage","name":"Research & Projects | Renata Loureiro Frade, PhD","description":"Renata Frade's research projects: Femtellers feminist technology platform, FCT-funded PhD on 247 women-in-tech communities (Brazil & Portugal), Oscar Sala Chair AI & gender research.","url":"https://renatafrade.github.io/projects.html","author":{"@type":"Person","name":"Renata Loureiro Frade","url":"https://renatafrade.github.io/"}}
+    {"@context":"https://schema.org","@type":"WebPage","name":"Research & Projects | Renata Loureiro Frade, PhD","description":"Renata Frade's research projects: FCT-funded PhD on 247 women-in-tech communities (Brazil & Portugal), Oscar Sala Chair AI & gender research.","url":"https://renatafrade.github.io/projects.html","author":{"@type":"Person","name":"Renata Loureiro Frade","url":"https://renatafrade.github.io/"}}
     </script>
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased min-h-screen flex flex-col">
