--- a/publications.html
+++ b/publications.html
@@ -1,105 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Publications | Renata Loureiro Frade</title>
 
-  <!-- Link para o CSS principal do site -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- Mesmo CSS do site -->
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body class="bg-slate-50 text-slate-800 antialiased">
 
 <a href="#main" class="skip-link">Skip to content</a>
 
-<!-- HEADER -->
+<!-- ===== HEADER (igual ao site) ===== -->
 <header class="sticky top-0 z-50 bg-white/95 backdrop-blur-sm border-b border-slate-200/80">
   <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
-    <a href="index.html" class="text-xl font-semibold text-accent-700">
+
+    <a href="/" class="text-xl font-semibold text-accent-700">
       Renata Loureiro Frade
     </a>
 
     <nav class="flex gap-4 text-sm font-medium">
-      <a href="index.html" class="hover:text-accent-700">Home</a>
-      <a href="publications.html" class="text-accent-700 underline">Publications</a>
-      <a href="projects.html" class="hover:text-accent-700">Projects</a>
-      <a href="contact.html" class="hover:text-accent-700">Contact</a>
+      <a href="/" class="hover:text-accent-700">Home</a>
+      <a href="/publications.html" class="text-accent-700 underline">Publications</a>
+      <a href="/projects.html" class="hover:text-accent-700">Projects</a>
+      <a href="/contact.html" class="hover:text-accent-700">Contact</a>
     </nav>
+
   </div>
 </header>
 
-<!-- MAIN -->
-<main id="main" class="max-w-4xl mx-auto px-4 py-10 space-y-10">
+<!-- ===== MAIN (MESMO WRAPPER DAS OUTRAS PÁGINAS) ===== -->
+<main id="main">
+  <div class="max-w-6xl mx-auto px-4 py-14">
 
-  <h1 class="text-3xl font-semibold">Publications</h1>
+    <article class="max-w-4xl mx-auto space-y-14">
 
-  <!-- EDITED BOOKS -->
-  <section class="space-y-4">
-    <h2 class="text-2xl font-semibold border-b pb-2">Edited Books</h2>
-    <div>
-      <p class="font-semibold">Technofeminism: Multi and Transdisciplinary Contemporary Views on Women in Technology</p>
-      <p>Renata Frade, Mário Vairinhos, Renata Loureiro Frade (Editors). UA Editora, 2023.</p>
-    </div>
-  </section>
+      <!-- TÍTULO -->
+      <h1 class="text-3xl md:text-4xl font-semibold">
+        Publications
+      </h1>
 
-  <!-- BOOK CHAPTERS -->
-  <section class="space-y-4">
-    <h2 class="text-2xl font-semibold border-b pb-2">Book Chapters</h2>
+      <!-- ================= EDITED BOOKS ================= -->
+      <section class="space-y-4">
 
-    <div class="space-y-3">
-      <div>
-        <p class="font-semibold">Manifesto para uma Inteligência Artificial Responsável em Relação ao Gênero e Tecnologia</p>
-        <p>Frade, R., Terceiro, L., Pereira, I. In: <em>Inteligência Artificial Responsável no Brasil: Oportunidades e Desafios</em>. Edusp, 2026 (In press).</p>
-      </div>
+        <h2 class="text-xl font-semibold border-b pb-2">
+          Edited Books
+        </h2>
 
-      <div>
-        <p class="font-semibold">Feminist HCI in Practice: Developing a Storytelling Platform for Women in Tech Communities</p>
-        <p>Frade, R., Vairinhos, M., Gouveia, M. Lecture Notes in Computer Science (LNCS), HCI International 2025 Conference Proceedings. Springer, 2026.</p>
-      </div>
+        <div>
+          <p class="font-medium">
+            Technofeminism: Multi and Transdisciplinary Contemporary Views on Women in Technology
+          </p>
+          <p>
+            Renata Frade, Mário Vairinhos, Renata Loureiro Frade (Editors)<br>
+            UA Editora, 2023
+          </p>
+        </div>
 
-      <div>
-        <p class="font-semibold">Women in Technology: A Case Study in Science Communication and Knowledge Management</p>
-        <p>Frade, R., Vairinhos, M. Proceedings of 20th Iberian Conference on Information Systems and Technologies (CISTI 2025), pp. 825–836. Springer Nature Switzerland, 2026. <a href="#" class="text-accent-700 underline">DOI</a></p>
-      </div>
+      </section>
 
-      <!-- ADICIONA MAIS CAPÍTULOS AQUI SE NECESSÁRIO -->
-    </div>
-  </section>
+      <!-- ================= BOOK CHAPTERS ================= -->
+      <section class="space-y-6">
 
-  <!-- JOURNAL ARTICLES -->
-  <section class="space-y-4">
-    <h2 class="text-2xl font-semibold border-b pb-2">Journal Articles</h2>
+        <h2 class="text-xl font-semibold border-b pb-2">
+          Book Chapters
+        </h2>
 
-    <div class="space-y-3">
-      <div>
-        <p class="font-semibold">[Exemplo de Artigo]</p>
-        <p>Autor(es). <em>Nome da Revista</em>, ano.</p>
-      </div>
+        <div class="space-y-8">
 
-      <!-- ADICIONA MAIS ARTIGOS AQUI -->
-    </div>
-  </section>
+          <div>
+            <p class="font-medium">
+              Manifesto para uma Inteligência Artificial Responsável em Relação ao Gênero e Tecnologia
+            </p>
+            <p>
+              Frade, R., Terceiro, L., Pereira, I.<br>
+              In: <em>Inteligência Artificial Responsável no Brasil: Oportunidades e Desafios</em>.  
+              Edusp, 2026 (In press)
+            </p>
+          </div>
 
-  <!-- CONFERENCE PROCEEDINGS -->
-  <section class="space-y-4">
-    <h2 class="text-2xl font-semibold border-b pb-2">Conference Proceedings</h2>
+          <div>
+            <p class="font-medium">
+              Feminist HCI in Practice: Developing a Storytelling Platform for Women in Tech Communities
+            </p>
+            <p>
+              Frade, R., Vairinhos, M., Gouveia, M.<br>
+              LNCS, HCI International 2025 Proceedings. Springer, 2026
+            </p>
+          </div>
 
-    <div class="space-y-3">
-      <div>
-        <p class="font-semibold">[Exemplo de Conferência]</p>
-        <p>Autor(es). Nome da conferência, ano.</p>
-      </div>
-      <!-- ADICIONA MAIS CONFERÊNCIAS AQUI -->
-    </div>
-  </section>
+          <div>
+            <p class="font-medium">
+              Women in Technology: A Case Study in Science Communication and Knowledge Management
+            </p>
+            <p>
+              Frade, R., Vairinhos, M.<br>
+              CISTI 2025, pp. 825–836. Springer Nature Switzerland, 2026  
+              <a href="#" class="text-accent-700 underline hover:text-accent-800">
+                DOI
+              </a>
+            </p>
+          </div>
 
-  <!-- OUTROS TIPOS DE PUBLICAÇÕES -->
-  <!-- Podes criar mais seções como Necessário -->
+        </div>
 
+      </section>
+
+    </article>
+  </div>
 </main>
 
-<!-- FOOTER -->
+<!-- ===== FOOTER ===== -->
 <footer class="border-t border-slate-200/80 py-6">
   <div class="max-w-6xl mx-auto px-4 text-sm text-slate-500 text-center">
     © 2026 Renata Loureiro Frade
@@ -108,3 +121,4 @@
 
 </body>
 </html>
+
