--- a/publications.html
+++ b/publications.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Publications | Renata Loureiro Frade</title>
-
-  <!-- Mesmo CSS do site -->
-  <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-
-<body class="bg-slate-50 text-slate-800 antialiased">
-
-<a href="#main" class="skip-link">Skip to content</a>
-
-<!-- ===== HEADER (igual ao site) ===== -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <header class="sticky top-0 z-50 bg-white/95 backdrop-blur-sm border-b border-slate-200/80">
   <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
 
